# ffetch

./: .gitignore  :  Build.java  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Magefile.go  Makefile  PKGBUILD  README.md  README.org  ascii_arts.tar.xz  build.bat  build.c  build.clj  build.cpp  build.cr  build.cs  build.erl  build.exs  build.fsx  build.hs  build.js  build.kts  build.lisp  build.lua  build.m  build.m4  build.ml  build.pas  build.php  build.pl  build.ps1  build.py  build.rb  build.scala  build.sol  build.swift  (+16 more)
.github/workflows/: build-and-release.yml  release.yml  rust.yml
ascii/: archlinux  archlinux_small  cachyos  debian  debian_small  endeavouros  fedora  fedora_small  gentoo  gentoo_small  nixos  ubuntu  void  void_small  voidlinux
ascii_arts/: afplusplus.txt  archlinux.txt  debian.txt  fedora.txt  linux.txt
builder/: package.json  vite.config.js
builder/src/lib/server/: builds.js
builder/src/routes/: +page.svelte
docs/: installation.md
examples/: ffetch-middle.conf
release/: ffetch
src/: config.rs  ffetch.rs  lib.rs  main.rs  platform.rs
src/config/: core.rs
