[package]
name = "ffetch"
version = "0.2.1"
edition = "2024"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false

[profile.performance]
inherits = "release"
opt-level = 3
codegen-units = 16
lto = false

[profile.size]
inherits = "release"
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"


# ADD DEB AND RPM PACKAGING.

[dependencies]
directories = "5.0.1"
sysinfo = "0.35.1"
whoami = "1.4.1"
rsbash = "2.1.0"
termion = "2.0.1"
regex = "1.11.1"
lazy_static = "1.5.0"
once_cell = "1.21.3"
display-info = "0.5.4"
which = "8.0.0"
